# unifiapi

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
sitemanager/: Cargo.toml  LICENSE-MIT  README.md
sitemanager/src/: lib.rs
sitemanager/src/endpoints/: mod.rs
sitemanager/src/endpoints/get_host_by_id/: mod.rs  models.rs
sitemanager/src/endpoints/get_isp_metrics/: mod.rs  models.rs
sitemanager/src/endpoints/get_sd_wan_config_by_id/: mod.rs  models.rs
sitemanager/src/endpoints/get_sd_wan_config_status/: mod.rs  models.rs
sitemanager/src/endpoints/list_devices/: mod.rs  models.rs
sitemanager/src/endpoints/list_hosts/: mod.rs  models.rs
sitemanager/src/endpoints/list_sd_wan_configs/: mod.rs  models.rs
sitemanager/src/endpoints/list_sites/: mod.rs  models.rs
sitemanager/src/endpoints/query_isp_metrics/: mod.rs  models.rs
sitemanager/tests/: integration.rs
