[package]
name = "unifiapi_sitemanager"
version = "0.1.1"
edition = "2024"
authors = ["Jak Bracegirdle <jak@bracegirdle.io>"]
description = "A Rust library for interacting with the UniFi Site Manager API."
license = "MIT OR Apache-2.0"
repository = "https://github.com/GhostTorment/unifiapi"
readme = "README.md"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
chrono = { version = "0.4.40", features = ["serde"] }

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }